--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-family: Arial, sans-serif;
-	font-size: 20px;
+	font-size: 18px;
 	color: #954d1d;
 }
 
@@ -18,9 +18,10 @@ body {
 label, input, button {
 	display: block;
 	padding: 20px;
-	width: 350px;
+	width: 380px;
 	margin: 5px auto 5px auto;
 }
+
 
 input {
 	background-color: #ffe378;
@@ -30,11 +31,15 @@ input {
 
 button {
 	margin-top: 15px;
-	background-color: #fec262;
-	border: 2px solid #fec262;
+	background-color: #ffa21d;
+	border: 2px solid #ffa21d;
 	border-radius: 5%;
 	color: #fffee0;
 	font-size: 22px;
+}
+
+button:hover {
+	background-color: #fec262;
 }
 
 div {
