--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
 	margin: 0;
 	padding: 0;
-	background-image: url(runner.jpeg);
+	background: url(runner.jpeg) no-repeat;
 	/* https://www.pexels.com/photo/woman-girl-silhouette-jogger-40751/ */
 	background-size: cover;
-	background-repeat: no-repeat;
+	min-height: 100%;
+	width: auto;
 	font-family: Arial, sans-serif;
 	font-size: 18px;
 	color: #954d1d;
@@ -13,10 +14,12 @@ body {
 #page_container {
 	width: 400px;
 	margin: 100px auto auto auto;
+	overflow: hidden;
 }
 
 label, input, button {
-	display: block;
+	display: flex;
+	flex-wrap: wrap;
 	padding: 20px;
 	width: 380px;
 	margin: 5px auto 5px auto;
